<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lesze.myapplication.MainActivity">

    <Button
        android:id="@+id/lista_produktow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="25sp"
        android:textStyle="normal"
        android:text="@string/list_of_products"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/opcje"
        />

    <Button
        android:id="@+id/opcje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/configuration"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <Button
        android:id="@+id/database_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opcje"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/data"
        android:textSize="20sp" />


</RelativeLayout>
