<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/row_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="NAME:     " />

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:layout_toRightOf="@+id/textView1"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="PRICE:    "
                android:layout_below="@+id/textView1"/>

            <TextView
                android:id="@+id/textView_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_name"
                android:layout_toRightOf="@+id/textView2"
                android:text="@string/product_price" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="QUANTITY: "
                android:layout_below="@+id/textView2"/>

            <TextView
                android:id="@+id/textView_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_price"
                android:text="@string/product_quantity"
                android:layout_toRightOf="@+id/textView3"/>

            <CheckBox
                android:id="@+id/row_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>